@startuml

' --------------- LEVELS --------------- '

' Level1 '

class Level1{
 - MAX_MOVES: int
 # fillCells(): void
 + tryMove(): bool
 - setGoldenCross(): void
}

Grid <-- Level1
Level1 *-- Level1State


' Level1State '

class Level1State{
 - long maxMoves
 - long goldenCells
 + gameOver(): bool
 + playerWon(): bool
 + toString(): String
 - addGoldenCells(): void
}

GameState <-- Level1State


' Level3 '

class Level3 {
  - BOMB_FREQUENCY : double
  - BOMB_INITIAL_MOVES : int
  - NUMBER_OF_BOMBS : int
  + tryMove(): bool
  # fillCells(): void
  - updateBombCandies(): void
}

Grid <-- Level3
Level3 *-- Level3State


' Level3State'

class Level3State {
  - bombExploded : boolean
  - bombsOnGrid : int
  - bombsToPlace : long
  - remainingMovements : int
  + gameOver(): bool
  + playerWon(): bool
  + setBombsOnGrid(int): void
  + toString(): String
  - bombExploded(): void
  - bombPlaced(): void
  - setRemainingMovements(int): void
}

GameState <-- Level3State


@enduml
